# MCP-media-extract

./: .gitignore  README.md
.cursor/: mcp.json
.cursor/rules/: media-local-extract.mdc
media_extract_tool/: README.md  pyproject.toml  requirements.txt
media_extract_tool/src/media_extract/: __init__.py  __main__.py  cli.py  mcp_server.py  runner.py  schema_path.py  udr.py
media_extract_tool/src/media_extract/extractors/: __init__.py  docx.py  image.py  pdf.py  pptx.py
media_extract_tool/src/media_extract/schemas/: unified-document-representation.schema.json
