[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-extract"
version = "0.2.0"
description = "本地提取 DOCX / PPTX / PDF / 图片为文本或 UDR JSON；含 CLI 与 MCP。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
  "PyMuPDF>=1.24.0",
  "Pillow>=10.0.0",
  "jsonschema>=4.20.0",
  "mcp>=1.2.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]

[project.scripts]
media-extract = "media_extract.cli:main"
media-extract-mcp = "media_extract.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
media_extract = ["schemas/*.json"]
